# arf

./: CHANGELOG.md  Cargo.toml  README.md  dist-workspace.toml
.github/: dependabot.yml
.github/workflows/: check.yml  publish-crate.yml  release.yml
crates/arf-console/src/completion/: menu.rs
crates/arf-console/src/repl/snapshots/: arf__repl__banner__tests__banner_default_r_initialized.snap  arf__repl__banner__tests__banner_default_r_not_initialized.snap  arf__repl__banner__tests__banner_reprex_custom_comment.snap  arf__repl__banner__tests__banner_reprex_mode.snap  arf__repl__banner__tests__banner_vi_mode.snap
crates/arf-console/tests/: pty_advanced_tests.rs
crates/arf-harp/src/: completion.rs  help.rs
crates/arf-harp/tests/: completion.rs  help.rs  startup.rs  visibility.rs
crates/arf-harp/tests/common/: mod.rs
