[workspace]
resolver = "3"
members = ["crates/*"]
default-members = ["crates/arf-console"]

[workspace.package]
version = "0.3.3"
edition = "2024"
license = "MIT"
repository = "https://github.com/eitsupi/arf"

[workspace.dependencies]
# Internal crates
arf-harp = { version = "0.3.3", path = "crates/arf-harp" }
arf-libr = { version = "0.3.3", path = "crates/arf-libr" }
r-vignette-to-md = { version = "0.3.3", path = "crates/r-vignette-to-md" }

# R FFI
libloading = "0.9"

# Terminal UI
crossterm = "0.29"
crokey = "1.4"
nu-ansi-term = { version = "0.50", features = ["derive_serde_style"] }
ratatui = { version = "0.30", default-features = false, features = ["crossterm"] }
reedline = { version = "0.47", features = ["sqlite", "idle_callback"] }

# Configuration
dirs = "6.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "1.1"

# Tree-sitter parsing
tree-sitter = "0.24"
tree-sitter-r = "1.2"

# Rd to Markdown conversion
rd2qmd-core = { version = "0.1.1", features = ["roxygen"] }

# Markdown parsing
pulldown-cmark = "0.13"

# Fuzzy matching
nucleo-matcher = "0.3"

# CLI
clap = { version = "4.5", features = ["derive", "env"] }
clap_complete = "4.5"

# Database
rusqlite = { version = "0.37.0", features = ["bundled"] }

# Utilities
anyhow = "1.0"
base64 = "0.22"
chrono = "0.4"
encoding_rs = "0.8"
htmd = "0.5"
env_logger = "0.11"
gethostname = "1.1"
log = "0.4"
once_cell = "1.19"
semver = "1.0"
thiserror = "2.0"
unicode-width = "0.2"

# Unix
exec = "0.3"
libc = "0.2"
nix = { version = "0.31", features = ["signal", "process"] }

# Windows
windows-sys = { version = "0.61", features = ["Win32_Foundation", "Win32_System_Console", "Win32_System_Threading"] }
rpassword = "7"

# Schema generation
schemars = "1.2"

# Async runtime (IPC server)
tokio = { version = "1", features = ["rt", "net", "io-util", "sync", "macros", "time"] }
tokio-util = "0.7"

# Signal handling
ctrlc = { version = "3.4", features = ["termination"] }

# Testing
insta = "1.46"
serial_test = "3"
portable-pty = "0.9"
regex = "1.11"
tempfile = "3"
vt100 = "0.16"

# Patch crossterm with Windows VT input support (bracketed paste)
# https://github.com/crossterm-rs/crossterm/pull/1030
[patch.crates-io]
crossterm = { git = "https://github.com/crossterm-rs/crossterm", rev = "03bb4f26610a5904b8e875fcb610d16bf7d00814" }

# The profile that 'dist' will build with
[profile.dist]
inherits = "release"
lto = "fat"
codegen-units = 1
strip = true
panic = "abort"
opt-level = "s"
